--- a/app/views/chat/_sidebar_menu.html.erb
+++ b/app/views/chat/_sidebar_menu.html.erb
@@ -60,6 +60,14 @@
               </a>
             </li>
             <li>
+              <a href="<%= five_whys_path %>" class="<%= current_page?(five_whys_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
+                </svg>
+                5W1H 分析
+              </a>
+            </li>
+            <li>
               <ul role="list" class="-mx-2 space-y-1">
                 <li>
                   <!-- Current: "bg-gray-800 text-white", Default: "text-gray-400 hover:text-white hover:bg-gray-800" -->
@@ -72,14 +80,6 @@
                 </li>
               </ul>
             </li>
-<!--            <li>-->
-<!--              <a href="<%#= five_whys_path %>" class="<%#= current_page?(five_whys_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">-->
-<!--                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">-->
-<!--                  <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />-->
-<!--                </svg>-->
-<!--                5W1H 分析-->
-<!--              </a>-->
-<!--            </li>-->
           </ul>
         </nav>
       </div>
@@ -108,6 +108,14 @@
               </a>
             </li>
             <li>
+              <a href="<%= five_whys_path %>" class="<%= current_page?(five_whys_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
+                </svg>
+                5W1H 分析
+              </a>
+            </li>
+            <li>
               <!-- Current: "bg-gray-800 text-white", Default: "text-gray-400 hover:text-white hover:bg-gray-800" -->
               <a href="<%= chat_index_path %>" class="<%= current_page?(chat_index_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -116,14 +124,6 @@
                 思维模型对话
               </a>
             </li>
-<!--            <li>-->
-<!--              <a href="<%#= five_whys_path %>" class="<%#= current_page?(five_whys_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">-->
-<!--                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">-->
-<!--                  <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />-->
-<!--                </svg>-->
-<!--                5W1H 分析-->
-<!--              </a>-->
-<!--            </li>-->
           </ul>
         </li>
         <li class="-mx-6 mt-auto">
