--- a/app/views/layouts/_app.html.erb
+++ b/app/views/layouts/_app.html.erb
@@ -11,7 +11,8 @@
               <div class="ml-10 flex items-baseline space-x-4">
                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                 <a href="<%= root_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">职业发展</a>
-                <a href="<%= switch_view_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">思维模型</a>
+                <a href="<%= switch_view_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">产品决策</a>
+                <a href="<%= challenges_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">遇到问题</a>
               </div>
             </div>
           </div>
@@ -49,7 +50,8 @@
       <div class="space-y-1 px-2 py-3 sm:px-3">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
         <a href="<%= root_path %>" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">职业发展</a>
-        <a href="<%= switch_view_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">思维模型</a>
+        <a href="<%= switch_view_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">产品决策</a>
+        <a href="<%= challenges_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">遇到问题</a>
       </div>
     </div>
   </nav>
