--- a/app/views/chat/_prompt_messages.html.erb
+++ b/app/views/chat/_prompt_messages.html.erb
@@ -1,17 +1,17 @@
-<div class="flex h-[97vh] w-full flex-col">
+<div class="flex h-[97vh] w-full flex-col" data-controller="chat">
   <!-- Prompt Messages -->
   <div
     class="flex-1 space-y-6 overflow-y-auto rounded-xl bg-slate-200 p-4 text-sm leading-6 text-slate-900 shadow-sm dark:bg-slate-900 dark:text-slate-300 sm:text-base sm:leading-7"
-    data-thinking-models-target="messages"
+    data-chat-target="messages"
   >
     <!-- Prompt message list -->
   </div>
   <!-- Prompt message input -->
-  <form class="mt-2" data-action="thinking-models#submit">
+  <form class="mt-2" data-action="chat#submit">
     <label for="chat-input" class="sr-only">请描述你遇到的产品问题</label>
     <div class="flex gap-x-2">
       <input
-        data-thinking-models-target="input"
+        data-chat-target="input"
         id="chat-input"
         type="text"
         class="w-full rounded-lg border border-slate-300 bg-slate-200 p-3 text-sm text-slate-800 shadow-md focus:border-blue-600 focus:outline-none focus:ring-1 focus:ring-blue-600 dark:border-slate-200/10 dark:bg-slate-800 dark:text-slate-200 dark:placeholder-slate-400 dark:focus:border-blue-600 sm:text-base"
@@ -22,7 +22,7 @@
       <button
         type="submit"
         class="rounded-lg border border-transparent bg-blue-600 px-3 py-1 text-slate-200 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300"
-        data-thinking-models-target="submitButton"
+        data-chat-target="submitButton"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
