--- a/app/views/chat/challenges.html.erb
+++ b/app/views/chat/challenges.html.erb
@@ -89,21 +89,6 @@
 
   <aside class="fixed inset-y-0 left-72 hidden w-96 overflow-y-auto border-r border-gray-200 px-4 py-6 sm:px-6 lg:px-8 xl:block">
     <!-- Secondary column (hidden on smaller screens) -->
-    <div class="border-b border-gray-900/10 pb-12">
-      <h2 class="text-base font-semibold leading-7 text-gray-900">面试</h2>
-      <p class="mt-1 text-sm leading-6 text-gray-600">汪呜～妈妈在面试环节遇到了什么困难？</p>
-
-      <div class="mt-3 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-        <div class="sm:col-span-2">
-          <button type="button" class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100">投了简历却没面试</button>
-        </div>
-        <div class="sm:col-span-2">
-          <button type="button" class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100">offer不满意</button>
-        </div>
-        <div class="sm:col-span-2">
-          <button type="button" class="rounded-md bg-indigo-50 px-2.5 py-1.5 text-sm font-semibold text-indigo-600 shadow-sm hover:bg-indigo-100">回答得不好</button>
-        </div>
-      </div>
-    </div>
+    <%= render "chat/challenges/side_project" %>
   </aside>
 </div>
