--- a/app/views/chat/_sidebar_menu.html.erb
+++ b/app/views/chat/_sidebar_menu.html.erb
@@ -60,6 +60,14 @@
               </a>
             </li>
             <li>
+              <a href="<%= user_interview_questions_path %>" class="<%= current_page?(user_interview_questions_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
+                </svg>
+                用户访谈
+              </a>
+            </li>
+            <li>
               <a href="<%= five_whys_path %>" class="<%= current_page?(five_whys_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
@@ -105,6 +113,14 @@
                   <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                 </svg>
                 用户视角分析
+              </a>
+            </li>
+            <li>
+              <a href="<%= user_interview_questions_path %>" class="<%= current_page?(user_interview_questions_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
+                </svg>
+                用户访谈
               </a>
             </li>
             <li>
