--- a/app/views/homepage/_header.html.erb
+++ b/app/views/homepage/_header.html.erb
@@ -1,9 +1,12 @@
 <header class="absolute inset-x-0 top-0 z-50">
   <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
     <div class="flex lg:flex-1">
-      <a href="#" class="-m-1.5 p-1.5">
+      <a href="/" class="-m-1.5 p-1.5">
         <span class="sr-only">产品汪汪</span>
-        <%= image_tag 'logo.png', class: 'h-8 w-8', alt: '产品汪汪' %>
+        <div class="flex items-center">
+          <%= image_tag 'logo.png', class: 'h-8 w-8', alt: '产品汪汪' %>
+          <span class="ml-2 text-lg font-semibold leading-6 text-gray-900">产品汪汪</span>
+        </div>
       </a>
     </div>
     <div class="flex lg:hidden">
