--- a/app/views/chat/_sidebar_menu.html.erb
+++ b/app/views/chat/_sidebar_menu.html.erb
@@ -144,7 +144,7 @@
         </li>
         <li class="-mx-6 mt-auto">
           <a href="#" class="flex items-center gap-x-4 px-6 py-3 text-sm font-semibold leading-6 text-white hover:bg-gray-800">
-            <img class="h-8 w-8 rounded-full bg-gray-800" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+            <%= image_tag 'avatar/shibainu.webp', class: 'h-8 w-8 flex-none rounded-full bg-gray-50', alt: 'avatar' %>
             <span class="sr-only">Your profile</span>
             <!--              <span aria-hidden="true">Tom Cook</span>-->
           </a>
@@ -164,6 +164,6 @@
   <div class="flex-1 text-sm font-semibold leading-6 text-white">Dashboard</div>
   <a href="#">
     <span class="sr-only">Your profile</span>
-    <img class="h-8 w-8 rounded-full bg-gray-800" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+    <%= image_tag 'avatar/shibainu.webp', class: 'h-8 w-8 flex-none rounded-full bg-gray-50', alt: 'avatar' %>
   </a>
 </div>
