--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -10,7 +10,7 @@
           <li class="relative flex justify-between gap-x-6 px-4 py-5 hover:bg-gray-50 sm:px-6">
             <div class="flex min-w-0 gap-x-4">
               <!-- You might want to replace the img src with a relevant avatar if available -->
-              <img class="h-12 w-12 flex-none rounded-full bg-gray-50" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+              <%= image_tag 'avatar/shibainu.webp', class: 'h-12 w-12 flex-none rounded-full bg-gray-50', alt: 'avatar' %>
               <div class="min-w-0 flex-auto">
                 <p class="text-sm font-semibold leading-6 text-gray-900">
                   <a href="<%= resume_path(resume) %>">
