--- a/app/views/chat/_sidebar_menu.html.erb
+++ b/app/views/chat/_sidebar_menu.html.erb
@@ -90,6 +90,37 @@
             </li>
           </ul>
         </nav>
+        <nav class="bg-base-200 p-4 rounded-box w-56">
+          <ul class="menu">
+            <li><a href="#">Item 1</a></li>
+            <li>
+              <button data-toggle="submenu" class="flex justify-between w-full p-2 bg-gray-100 rounded">
+                Parent
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-4 h-4">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 9l6 6 6-6" />
+                </svg>
+              </button>
+              <ul class="hidden ml-4" data-submenu>
+                <li><a href="#">Submenu 1</a></li>
+                <li><a href="#">Submenu 2</a></li>
+                <li>
+                  <button data-toggle="submenu" class="flex justify-between w-full p-2 bg-gray-100 rounded">
+                    Parent
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-4 h-4">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M6 9l6 6 6-6" />
+                    </svg>
+                  </button>
+                  <ul class="hidden ml-4" data-submenu>
+                    <li><a href="#">Submenu 1</a></li>
+                    <li><a href="#">Submenu 2</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="#">Item 3</a></li>
+          </ul>
+        </nav>
+
       </div>
     </div>
   </div>
@@ -102,7 +133,7 @@
     <a class="flex h-16 shrink-0 items-center" href="/">
       <%= image_tag 'logo.png', class: 'h-8 w-8', alt: '产品汪汪' %>
     </a>
-    <nav class="flex flex-1 flex-col">
+    <nav class="flex flex-1 flex-col" data-controller="submenu">
       <ul role="list" class="flex flex-1 flex-col gap-y-7">
         <li>
           <ul role="list" class="-mx-2 space-y-1">
@@ -116,17 +147,38 @@
               </a>
             </li>
             <li>
-              <a href="<%= user_interview_questions_path %>" class="<%= current_page?(user_interview_questions_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+              <a data-action="click->submenu#toggle" data-submenu-target="parent" href="#" class="text-gray-400 hover:text-white hover:bg-gray-800 group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
                 </svg>
                 用户访谈
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 ml-auto" data-submenu-target="arrow">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                </svg>
               </a>
+              <ul class="hidden ml-4" data-submenu-target="submenu">
+                <li>
+                  <a href="<%= user_interview_questions_path %>" class="<%= current_page?(user_interview_questions_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
+                    </svg>
+                    准备访谈问题
+                  </a>
+                </li>
+                <li>
+                  <a href="<%= user_interview_questions_analysis_path %>" class="<%= current_page?(user_interview_questions_analysis_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="m10.5 21 5.25-11.25L21 21m-9-3h7.5M3 5.621a48.474 48.474 0 0 1 6-.371m0 0c1.12 0 2.233.038 3.334.114M9 5.25V3m3.334 2.364C11.176 10.658 7.69 15.08 3 17.502m9.334-12.138c.896.061 1.785.147 2.666.257m-4.589 8.495a18.023 18.023 0 0 1-3.827-5.802" />
+                    </svg>
+                    访谈内容分析
+                  </a>
+                </li>
+              </ul>
             </li>
             <li>
               <a href="<%= five_whys_path %>" class="<%= current_page?(five_whys_path) ? 'bg-gray-800 text-white' : 'text-gray-400 hover:text-white hover:bg-gray-800' %> group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m15.75 15.75-2.489-2.489m0 0a3.375 3.375 0 1 0-4.773-4.773 3.375 3.375 0 0 0 4.774 4.774ZM21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                 </svg>
                 5W1H 分析
               </a>
