--- a/app/views/chat/user_interview_questions_analysis.html.erb
+++ b/app/views/chat/user_interview_questions_analysis.html.erb
@@ -11,7 +11,7 @@
               <p class="mt-2 text-sm text-gray-700">访谈内容列表，包括访谈录音、分析等内容。</p>
             </div>
             <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
-              <button type="button" class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">新增访谈</button>
+              <button type="button" data-action="slide-over#show" class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">新增访谈</button>
             </div>
           </div>
           <div class="mt-8 flow-root">
@@ -31,8 +31,8 @@
                   </thead>
                   <tbody class="divide-y divide-gray-200">
                   <tr>
-                    <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">Lindsay Walton</td>
-                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Front-end Developer</td>
+                    <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">用户研究困难</td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">曾曾</td>
                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">2024-05-03</td>
                     <td class="whitespace-nowrap px-3 py-5 text-sm text-gray-500">
                       <span class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">Active</span>
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <div class="relative z-10" aria-labelledby="slide-over-title" role="dialog" aria-modal="true">
+    <div class="relative z-10" aria-labelledby="slide-over-title" role="dialog" aria-modal="true" data-slide-over-target="overlay">
       <!-- Background backdrop, show/hide based on slide-over state. -->
       <div class="fixed inset-0"></div>
 
@@ -69,7 +69,7 @@
                 From: "translate-x-0"
                 To: "translate-x-full"
             -->
-            <div class="pointer-events-auto w-screen max-w-2xl">
+            <div class="pointer-events-auto w-screen max-w-2xl transform transition ease-in-out duration-500 sm:duration-700" data-slide-over-target="panel">
               <form class="flex h-full flex-col overflow-y-scroll bg-white shadow-xl">
                 <div class="flex-1">
                   <!-- Header -->
@@ -80,7 +80,7 @@
                         <p class="text-sm text-gray-500">上传访谈的录音并填写相关信息</p>
                       </div>
                       <div class="flex h-7 items-center">
-                        <button type="button" class="relative text-gray-400 hover:text-gray-500">
+                        <button type="button" data-action="slide-over#hide" class="relative text-gray-400 hover:text-gray-500">
                           <span class="absolute -inset-2.5"></span>
                           <span class="sr-only">Close panel</span>
                           <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -128,7 +128,7 @@
                 <!-- Action buttons -->
                 <div class="flex-shrink-0 border-t border-gray-200 px-4 py-5 sm:px-6">
                   <div class="flex justify-end space-x-3">
-                    <button type="button" class="rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">取消</button>
+                    <button type="button" data-action="slide-over#hide" class="rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">取消</button>
                     <button type="submit" class="inline-flex justify-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">新增</button>
                   </div>
                 </div>
